--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.19.2",
-    "gh-pages": "^6.1.1",
     "mongoose": "^8.4.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
@@ -50,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
